third_party/blink/web_tests/external/wpt/generic-sensor/idlharness.https.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS Sensor interface: existence and properties of interface object
PASS Sensor interface object length
PASS Sensor interface object name
PASS Sensor interface: existence and properties of interface prototype object
PASS Sensor interface: existence and properties of interface prototype object's "constructor" property
PASS Sensor interface: existence and properties of interface prototype object's @@unscopables property
PASS Sensor interface: attribute activated
PASS Sensor interface: attribute hasReading
PASS Sensor interface: attribute timestamp
PASS Sensor interface: operation start()
PASS Sensor interface: operation stop()
PASS Sensor interface: attribute onreading
PASS Sensor interface: attribute onactivate
PASS Sensor interface: attribute onerror
PASS SensorErrorEvent interface: existence and properties of interface object
PASS SensorErrorEvent interface object length
PASS SensorErrorEvent interface object name
PASS SensorErrorEvent interface: existence and properties of interface prototype object
PASS SensorErrorEvent interface: existence and properties of interface prototype object's "constructor" property
PASS SensorErrorEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS SensorErrorEvent interface: attribute error
Harness: the test ran to completion.

